--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
  <head>
+   <meta charset="utf-8">
    <title>Vue.js basics</title>
    <!--  bootstrap -->
-   <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-   <!-- CSS -->
-   <link rel='stylesheet', href='/stylesheets/style.css'>
-   <!--  Vue.js -->
-   <script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.js"></script>
    <!--  Font Awesome -->
    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
  </head>
  <body>
-   <%- content %>
+   <div id="app"></div>
+    <!-- built files will be auto injected -->
  </body>
 </html>
